zorch/csrc/tensor.h

typedef struct {
  float *data;
  int *strides;
  int *shape;
  int ndim;
  int size;
  char *device;
} Tensor;
/* 矩阵相乘运算 */
Tensor *matmul_tensor(Tensor *tensor1, Tensor *tensor2);
/* 逐点相乘运算，阿达玛积 */
Tensor *elementwise_mul_tensor(Tensor *tensor1, Tensor *tensor2);
/* 张量和标量的相乘 */
Tensor *scalar_mul_tensor(Tensor *tensor, float scalar);
Tensor *transpose_tensor(Tensor *tensor);